import { Scene } from "@babylonjs/core";
import { App } from "../index";

export interface Screen {
  _scene: Scene;

  createScene: (app: App) => Promise<void>;
}

enum State {
  NULL = 0,
  LOGIN = 1,
  CHARACTER_SELECTION = 2,
  CHARACTER_EDITOR = 3,
  DEBUG_SCENE = 4,
  REGISTER = 5,
  GAME = 6,
  ANIMATION = 7,
  LOADING = 8,
}

export default State;
